--- a/index.html
+++ b/index.html
@@ -6,9 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Developer-Portfolio</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <h1>Hello world!</h1>
+    <header>
+        <nav>
+            <h2 class="nav-titile">Ma<span class="text-primary">r</span>y</h2>
+            <ul>
+                <li><a href="">Portfolio</a></li>
+                <li><a href=""></a>Blog</li>
+                <li><button class="btn-primary">Hire me</button></li>
+            </ul>
+        </nav>
+        <!-- header banner -->
+       <div class="banner">
+        <div >
+            <h2 class="banner-subtitle">Hi I am</h2>
+            <h1 class="banner-title">Mary Hardy</h1>
+            <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+            <div class="btn-group">
+                <button class="btn-primary">Download CV</button>
+                <button class="btn-primary text-primary second-btn ">Contact</button>
+            </div>
+        </div>
+        <img class="banner-img" src="images/hardy.png" alt="Image of a man">
+       </div>
+    </header>
+    <main>
+        <!-- about section -->
+        <section class="about">
+            <h1 class="about-title">About Me</h1>
+            <p class="about-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
