complete what i do section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,32 @@
                 </div>
             </div>
         </section>
+        <!-- what i do section -->
+        <section class="what-i-do">
+            <h1 class="section-title">What i do</h1>
+            <div class="skil-container">
+                <div class="skil">
+                    <img src="images/icons/js.png" alt="javascript-icon">
+                    <p class="skil-title">Vanila Javascript</p>
+                    <p class="skil-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skil">
+                    <img src="images/icons/react.png" alt="react icon">
+                    <p class="skil-title">React</p>
+                    <p class="skil-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skil">
+                    <img src="images/icons/nodejs.png" alt="node js icon">
+                    <p class="skil-title">Node Js</p>
+                    <p class="skil-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skil">
+                    <img src="images/icons/mongo.png" alt="">
+                    <p class="skil-title">Mongo DB</p>
+                    <p class="skil-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
