--- a/index.html
+++ b/index.html
@@ -83,6 +83,72 @@
                 </div>
             </div>
         </section>
+        <section class="summary-section">
+            <h1 class="section-title  summary-title">A Summary of My Resume</h1>
+            <div class="resume-content">
+                <div class="education-content">
+                    <h2 class="resume-title">My Education</h2>
+                    <div class="resume-info">
+                        <p class="resume-info-title">Master in Computer Engineering</p>
+                        <p class="resume-info-subtitle">Harvard University / 2015 - 2017</p>
+                        <p class="resume-info-description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-info">
+                        <p class="resume-info-title">Master in Computer Engineering</p>
+                        <p class="resume-info-subtitle">Harvard University / 2015 - 2017</p>
+                        <p class="resume-info-description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                    <div class="resume-info">
+                        <p class="resume-info-title">Master in Computer Engineering</p>
+                        <p class="resume-info-subtitle">Harvard University / 2015 - 2017</p>
+                        <p class="resume-info-description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                </div>
+                <div class="experience-content">
+                    <h2 class="resume-title">My Experience</h2>
+                    <div class="resume-info">
+                        <p class="resume-info-title">Master in Computer Engineering</p>
+                        <p class="resume-info-subtitle">Harvard University / 2015 - 2017</p>
+                        <p class="resume-info-description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div> <div class="resume-info">
+                        <p class="resume-info-title">Master in Computer Engineering</p>
+                        <p class="resume-info-subtitle">Harvard University / 2015 - 2017</p>
+                        <p class="resume-info-description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div> <div class="resume-info">
+                        <p class="resume-info-title">Master in Computer Engineering</p>
+                        <p class="resume-info-subtitle">Harvard University / 2015 - 2017</p>
+                        <p class="resume-info-description">
+                            List skill/technologies here. You can change the icon above 
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                        <hr>
+                    </div>
+                </div>
+            </div>
+            <div class="resume-btn">
+                <button class="btn-primary ">Download CV</button>
+            </div>
+        </section>
     </main>
     <footer>
 
